// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormErrorMessage with errorMessage 1`] = `
<div
  className="box marginTop2"
>
  <div
    className="Text fontSize1 red alignLeft breakWord fontWeightNormal"
  >
    <span
      id="test-error"
    >
      some error message
    </span>
  </div>
</div>
`;

exports[`FormErrorMessage with no errorMessage 1`] = `
<div
  className="box marginTop2"
>
  <div
    className="Text fontSize1 red alignLeft breakWord fontWeightNormal"
  >
    <span
      id="test-error"
    >
      
    </span>
  </div>
</div>
`;
